--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Binance</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  
+    <!-- add to homescreen for ios -->
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="Binance" />
+    <!-- <meta name="apple-mobile-web-app-status-bar-style" content="#202630" /> -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="manifest" href="/manifest.json">
+
+    <!-- <link
+    href="https://static.toikit.com/fonts/SFUFutura/SFUFuturaBold.TTF"
+    rel="stylesheet">
+    <link
+    href="https://static.toikit.com/fonts/SFUFutura/SFUFuturaLight.TTF"
+    rel="stylesheet">
+    <link
+    href="https://static.toikit.com/fonts/SFUFutura/SFUFuturaRegular.TTF"
+    rel="stylesheet"> -->
     <style type="text/css">
       @font-face{
         font-family:'BinanceNova';font-display:swap;src:url('https://static.toikit.com/fonts/BinanceNova/BinanceNova-Light.woff2') format('woff2'),url('https://static.toikit.com/fonts/BinanceNova/BinanceNova-Light.otf') format('opentype');font-weight:200 300}@font-face{font-family:'BinanceNova';font-display:swap;src:url('https://static.toikit.com/fonts/BinanceNova/BinanceNova-Regular.woff2') format('woff2'),url('https://static.toikit.com/fonts/BinanceNova/BinanceNova-Regular.otf') format('opentype');font-weight:400}@font-face{font-family:'BinanceNova';font-display:swap;src:url('https://static.toikit.com/fonts/BinanceNova/BinanceNova-Medium.woff2') format('woff2'),url('https://static.toikit.com/fonts/BinanceNova/BinanceNova-Medium.otf') format('opentype');font-weight:500}@font-face{font-family:'BinanceNova';font-display:swap;src:url('https://static.toikit.com/fonts/BinanceNova/BinanceNova-SemiBold.woff2') format('woff2'),url('https://static.toikit.com/fonts/BinanceNova/BinanceNova-SemiBold.otf') format('opentype');font-weight:600}@font-face{font-family:'BinanceNova';font-display:swap;src:url('https://static.toikit.com/fonts/BinanceNova/BinanceNova-Bold.woff2') format('woff2'),url('https://static.toikit.com/fonts/BinanceNova/BinanceNova-Bold.otf') format('opentype');font-weight:700 800}@font-face{font-family:'BinanceNova';font-display:swap;src:url('https://static.toikit.com/fonts/BinanceNova/BinanceNova-Black.woff2') format('woff2'),url('https://static.toikit.com/fonts/BinanceNova/BinanceNova-Black.otf') format('opentype');font-weight:900}html body,body{font-family:BinanceNova,Arial,sans-serif!important}
